# AccelerometerViewer

./: .gitignore  README.md
AccelerometerViewer.xcodeproj/xcshareddata/xcschemes/: AccelerometerViewer [iOS].xcscheme  AccelerometerViewer [macOS].xcscheme
M5Stick-PlatformIO/: platformio.ini
M5Stick-PlatformIO/src/: main.cpp
Sources/Common/: CubeRenderer.swift
rust/: Cargo.toml
rust/bevy_serial/: Cargo.toml
rust/src/: main.rs
swift/AccelerometerViewer.xcodeproj/: project.pbxproj
swift/Sources/macOS/: AppDelegate.swift  SerialReader.swift  main.swift
