[package]
name = "bevy-accel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_serial = { version = "0.2.1", path = "./bevy_serial" }
# bevy_serial = "0.2.1"

# [dependencies.mio]
# features = ["os-poll", "os-ext"]

[dependencies.bevy]
version = "0.6"